--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   text_scroll: ^0.0.4
+  flutter_bloc: ^8.0.1
+  bloc: ^8.0.3
+  flutter_staggered_grid_view: ^0.6.1
   
 
 dev_dependencies:
